fixed sys dark mode breaking colors, added get cycle api

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,17 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
 @layer base {
-  /* body {
-    @apply antialiased bg-slate-100 dark:bg-slate-900 text-slate-900 dark:text-slate-100;
-  } */
-
   h1 {
     @apply font-jetbrains_mono;
   }
@@ -48,24 +38,6 @@
   label {
     @apply font-jetbrains_mono;
   }
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
 
 @layer components {
